--- a/dot-config/.tmux.conf
+++ b/dot-config/.tmux.conf
@@ -1,15 +1,21 @@
 set status-utf8 on
 set utf8 on
 
-set -g default-terminal "screen-256color"
+## Status bar design
+# status line
+set -g status-utf8 on
+set -g status-justify left
+set -g status-bg colour87
+set -g status-fg colour243
+set -g status-interval 2
 
-set -g status-style "bg=purple"
-set -g status-style "fg=black"
+set -g default-terminal "screen-256color"
 
 set-option -g prefix C-t
 set-option -g set-titles on
 set-option -g set-titles-string '[#S:#I #H] #W'
-unbind % # Remove default binding since we’re replacing                                                                                                                         
+unbind % # Remove default binding since we’re replacing
 bind | split-window -h
 bind - split-window -v
 bind e resize-pane -U 10
+bind r source-file ~/.tmux.conf
