--- a/vscode/folly/.vscode/settings.json
+++ b/vscode/folly/.vscode/settings.json
@@ -72,6 +72,33 @@
         "thread": "cpp",
         "typeindex": "cpp",
         "unordered_set": "cpp",
-        "variant": "cpp"
-    }
+        "variant": "cpp",
+        "bit": "cpp"
+    },
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope": "googletest.failed",
+                "settings": {
+                    "foreground": "#f00"
+                }
+            },
+            {
+                "scope": "googletest.passed",
+                "settings": {
+                    "foreground": "#0f0"
+                }
+            },
+            {
+                "scope": "googletest.run",
+                "settings": {
+                    "foreground": "#0f0"
+                }
+            }
+        ]
+    },
+    "gtest-adapter.debugConfig": [
+        "(lldb) Launch"
+    ],
+    "gtest-adapter.supportLocation": true
 }
