--- a/vscode/folly/.vscode/settings.json
+++ b/vscode/folly/.vscode/settings.json
@@ -100,5 +100,5 @@
     "gtest-adapter.debugConfig": [
         "(lldb) Launch"
     ],
-    "gtest-adapter.supportLocation": true
+    "gtest-adapter.supportLocation": false
 }
